// =========================================================
// NIAT Nexus — Database Schema v5
// Single flat posts table. No per-type detail tables.
// Every type-specific need is covered by 4 extra nullable
// columns on posts itself: date_at, restricted_to_college_id,
// resources, action_status. Everything else (organisation,
// eligibility, hook, looking_for, etc.) is written into content
// as prose, not a queryable column.
// Relationships, workflow state, and counters/logs stay relational.
// =========================================================

// =========================
// Enums
// =========================

Enum user_role {
  admin
  moderator
  success_coach
  student
  alumni
  guest
}

Enum identity_level {
  spark
  kindler
  amplifier
  pathfinder
  horizon
  constellation
}

Enum post_type {
  achievement
  knowledge
  collaboration
  event
  opportunity
  spark
}

Enum post_status {
  published
  archived
  deleted
}

Enum moderation_status {
  pending
  approved
  hold
  removed
}

Enum moderation_action {
  approve
  hold
  remove
}

Enum reaction_type {
  inspired
  curious
  want_to_try
}

Enum media_type {
  image
  video
  gif
}

// whether the action on this post is still available: collaboration
// still recruiting, event registration still open, opportunity still
// accepting applications. null for types with no action (knowledge, spark, achievement).
Enum action_status {
  open
  closed
}

Enum collaboration_response_status {
  interested
  accepted
  rejected
}

Enum conversation_status {
  active
  closed
}

Enum message_type {
  text
  link
  file
}

// =========================
// Core: colleges, users, categories
// =========================

Table colleges {
  id uuid [primary key]
  name varchar [not null]
  about text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table users {
  id uuid [primary key]
  college_id uuid [not null]
  username varchar [not null]
  email varchar [not null, unique]
  password text [not null]
  role user_role [default: `student`]
  is_alumni bool [default: false]
  total_xp integer [default: 0]
  current_level identity_level [default: `spark`]
  profile jsonb [not null, default: `'{}'`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "total_xp/current_level are the cached nightly rollup of activity_log.xp_awarded, never write directly. Kept as real columns since leaderboard/ambassador queries sort on them. profile jsonb shape depends on is_alumni: student = {course, year_of_study, about, goals}; alumni = {course?, about, goals?, graduation_year, industry, current_role, current_company, open_to_mentoring}."
}

Table categories {
  id uuid [primary key]
  name varchar [not null, unique]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// what a student is interested in / open to — powers feed personalisation.
// stays relational: needs joins against categories + probability tables.
Table user_interests {
  id uuid [primary key]
  user_id uuid [not null]
  category_id uuid [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table user_open_to {
  id uuid [primary key]
  user_id uuid [not null]
  label varchar [not null] // e.g. 'collaborating_on_side_projects', 'mentoring_juniors', 'brainstorming'
}

// =========================
// Posts — single flat table, no per-type detail tables
// =========================

Table posts {
  id uuid [primary key]
  user_id uuid [not null]
  college_id uuid [not null]
  category_id uuid [not null]
  type post_type [not null]
  title varchar
  content text [not null]

  // --- the only 4 extra columns, shared across whichever types need them ---
  date_at timestamp // opportunity: application deadline. event: when it happens.
  restricted_to_college_id uuid // null = open to all colleges. set = restricted to that one college. used by event, opportunity.
  resources jsonb // list of {title, link}. knowledge's shared links, and also opportunity/event's apply/register links — no separate url column, just another entry in this list.
  action_status action_status // collaboration: still recruiting. event: registration still open. opportunity: still accepting applications. null for knowledge/spark/achievement.

  status post_status [default: `published`]
  moderation_status moderation_status [default: `pending`]
  reviewed_by uuid
  reviewed_at timestamp

  like_count integer [default: 0]
  comment_count integer [default: 0]
  save_count integer [default: 0]
  engagement_score float [default: 0]

  is_active bool [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "title + content cover every type on their own (achievement and spark need nothing else). organisation, eligibility, hook, and looking_for are written into content as prose, not stored as separate columns. date_at, restricted_to_college_id, resources, and action_status are the only 4 extra columns, reused across whichever types need them, all nullable so a post only fills in what its type actually uses. engagement_score and the *_count fields are cached counters kept in sync by interaction consumers, then mirrored into the Redis ZSET used by feed_builder. category_id + created_at are what the Redis sorted-set pool groups/sorts by."
}

Table post_media {
  id uuid [primary key]
  post_id uuid [not null]
  url text [not null]
  media_type media_type [not null]
  position integer [default: 1]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// =========================
// Collaboration workflow — stays relational (response tracking,
// gates chat access; not just descriptive content)
// =========================

Table collaboration_responses {
  id uuid [primary key]
  post_id uuid [not null]
  user_id uuid [not null]
  status collaboration_response_status [default: `interested`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "An accepted response is what opens a conversation (see chat_participants.collaboration_response_id)."
}

// =========================
// Event / opportunity engagement — stays relational
// =========================

Table event_attendees {
  id uuid [primary key]
  post_id uuid [not null]
  user_id uuid [not null]
  registered_at timestamp [default: `CURRENT_TIMESTAMP`]
  attended_at timestamp
}

Table opportunity_clicks {
  id uuid [primary key]
  post_id uuid [not null]
  user_id uuid [not null]
  clicked_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// =========================
// Reactions & comments
// =========================

Table post_reactions {
  id uuid [primary key]
  post_id uuid [not null]
  user_id uuid [not null]
  type reaction_type [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "unique(post_id, user_id) — one reaction per user per post, can be changed. Rate-limited to 20/day at the app layer."
}

Table post_comments {
  id uuid [primary key]
  post_id uuid [not null]
  user_id uuid [not null]
  body text [not null]
  parent_id uuid
  is_edited bool [default: false]
  is_active bool [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table comment_edit_logs {
  id uuid [primary key]
  comment_id uuid [not null]
  previous_body text [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// =========================
// Moderation (success coach review queue)
// =========================

Table moderation_logs {
  id uuid [primary key]
  post_id uuid [not null]
  coach_id uuid [not null]
  action moderation_action [not null]
  note text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "Every approve/hold/remove decision, for coach accountability (PRD 8.5 Coach actions log)."
}

// =========================
// Gated messaging — chat_room per collaboration post,
// each participant's membership is tied to their own accepted response
// =========================

Table chat_rooms {
  id uuid [primary key]
  post_id uuid [not null] // the collaboration post this room belongs to
  status conversation_status [default: `active`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "One room per collaboration post. Mirrors thread status to posts.action_status (active while open/still forming, closed once wrapped)."
}

Table chat_participants {
  id uuid [primary key]
  chat_room_id uuid [not null]
  user_id uuid [not null]
  collaboration_response_id uuid [not null] // the accepted response that earned this person their seat — this is the structural enforcement
  last_read_at timestamp
  joined_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "unique(chat_room_id, user_id). A row can only be inserted here if collaboration_response_id points to a response with status = accepted — a user cannot be a participant without having gone through the collaboration flow. Every accepted responder gets their own row, tied to their own response, all pointing at the same chat_room."
}

Table messages {
  id uuid [primary key]
  chat_room_id uuid [not null]
  sender_id uuid [not null]
  body text
  type message_type [default: `text`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// success-coach <-> student support threads (separate from collaboration conversations)
Table support_conversations {
  id uuid [primary key]
  student_id uuid [not null]
  coach_id uuid [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table support_messages {
  id uuid [primary key]
  support_conversation_id uuid [not null]
  sender_id uuid [not null]
  body text [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// =========================
// Gamification — points, badges, ambassador
// =========================

Table badges {
  id uuid [primary key]
  name varchar [not null, unique] // Curious Mind, Community Builder, Builder, Knowledge Sharer, Door Opener, Guide
  description text
}

Table user_badges {
  id uuid [primary key]
  user_id uuid [not null]
  badge_id uuid [not null]
  earned_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table campus_ambassadors {
  id uuid [primary key]
  user_id uuid [not null]
  college_id uuid [not null]
  week_start_date date [not null]
  reason_note text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "unique(college_id, week_start_date). Calculated Sunday night, announced Monday digest."
}

// =========================
// Activity log — the non-academic data backbone
// =========================

Table activity_log {
  id bigint [primary key, increment]
  user_id uuid [not null]
  college_id uuid [not null]
  action_type varchar [not null] // 'post_created' | 'reacted' | 'commented' | 'event_attended' | 'opportunity_clicked' | 'collaboration_responded' | 'thread_saved' | 'student_welcomed' | 'digest_engaged' | 'profile_completed' | ...
  entity_type varchar // 'post' | 'event' | 'opportunity' | 'comment' | 'user'
  entity_id uuid
  category_id uuid
  xp_awarded integer [default: 0]
  metadata jsonb
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "MUST be range-partitioned by created_at (quarterly: activity_log_2026_q1, _q2, ...) from day one, PRD 7.5 flags this as a day-one decision not a retrofit. Detailed rows kept ~30 days hot per the points log spec, then rolled into users.total_xp and archived to S3 per the hot/warm/cold tiers. Doubles as the XP ledger and the source for coach dashboard signals + non-academic data export."
}

// =========================
// Feed personalisation — category probabilities (from whiteboard)
// =========================

Table user_category_probability {
  id uuid [primary key]
  user_id uuid [not null]
  category_id uuid [not null]
  probability float [not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table college_category_probability {
  id uuid [primary key]
  college_id uuid [not null]
  category_id uuid [not null]
  probability float [not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "user_category_probability and college_category_probability are combined (w1*x1 + w2*x2, per whiteboard) by the Preference Engine to rank category probability for a user, feeds the Redis-side post-pool grouping."
}

// =========================
// Notifications
// =========================

Table notifications {
  id uuid [primary key]
  user_id uuid [not null]
  type varchar [not null] // 'reaction' | 'comment' | 'collaboration_interest' | 'collaboration_accepted' | 'message' | 'ambassador' | 'digest'
  entity_type varchar
  entity_id uuid
  is_read bool [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// =========================
// Relationships
// =========================

Ref: users.college_id > colleges.id
Ref: user_interests.user_id > users.id
Ref: user_interests.category_id > categories.id
Ref: user_open_to.user_id > users.id

Ref: posts.user_id > users.id
Ref: posts.college_id > colleges.id
Ref: posts.category_id > categories.id
Ref: posts.reviewed_by > users.id
Ref: posts.restricted_to_college_id > colleges.id
Ref: post_media.post_id > posts.id

Ref: collaboration_responses.post_id > posts.id
Ref: collaboration_responses.user_id > users.id

Ref: event_attendees.post_id > posts.id
Ref: event_attendees.user_id > users.id

Ref: opportunity_clicks.post_id > posts.id
Ref: opportunity_clicks.user_id > users.id

Ref: post_reactions.post_id > posts.id
Ref: post_reactions.user_id > users.id

Ref: post_comments.post_id > posts.id
Ref: post_comments.user_id > users.id
Ref: post_comments.parent_id > post_comments.id
Ref: comment_edit_logs.comment_id > post_comments.id

Ref: moderation_logs.post_id > posts.id
Ref: moderation_logs.coach_id > users.id

Ref: chat_rooms.post_id > posts.id
Ref: chat_participants.chat_room_id > chat_rooms.id
Ref: chat_participants.user_id > users.id
Ref: chat_participants.collaboration_response_id > collaboration_responses.id
Ref: messages.chat_room_id > chat_rooms.id
Ref: messages.sender_id > users.id

Ref: support_conversations.student_id > users.id
Ref: support_conversations.coach_id > users.id
Ref: support_messages.support_conversation_id > support_conversations.id
Ref: support_messages.sender_id > users.id

Ref: user_badges.user_id > users.id
Ref: user_badges.badge_id > badges.id
Ref: campus_ambassadors.user_id > users.id
Ref: campus_ambassadors.college_id > colleges.id

Ref: activity_log.user_id > users.id
Ref: activity_log.college_id > colleges.id
Ref: activity_log.category_id > categories.id

Ref: user_category_probability.user_id > users.id
Ref: user_category_probability.category_id > categories.id
Ref: college_category_probability.college_id > colleges.id
Ref: college_category_probability.category_id > categories.id

Ref: notifications.user_id > users.id